UPDATE footer colours shouldnt introduce a11y contrast issues

--- a/app/styles/components/footer.css
+++ b/app/styles/components/footer.css
@@ -9,7 +9,10 @@
     background-color: var(--color-primary-400);
     color: var(--color-neutral-100);
 }
+.footer .link {
+    --link-color:  var(--color-neutral-100);
 
+}
 .footer p {
     margin: 0;
 }
